@@ -10,17 +10,18 @@ repositories {
 
 dependencies {
     implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
+    implementation enforcedPlatform("${quarkusPlatformGroupId}:quarkus-amazon-services-bom:${quarkusPlatformVersion}")
     implementation 'io.quarkus:quarkus-amazon-lambda'
     implementation 'io.quarkus:quarkus-arc'
+    implementation 'io.quarkiverse.amazonservices:quarkus-amazon-dynamodb'
+    implementation 'software.amazon.awssdk:url-connection-client'
     implementation 'org.apache.commons:commons-lang3:3.13.0'
-    implementation 'software.amazon.awssdk:dynamodb:2.29.25'
-    implementation 'software.amazon.awssdk:url-connection-client:2.29.25'
     testImplementation 'io.quarkus:quarkus-junit5'
     testImplementation 'io.rest-assured:rest-assured'
 }
 
-group 'bitxon.aws'
-version '1.0-SNAPSHOT'
+group = 'bitxon.aws'
+version = '1.0.0-SNAPSHOT'
 
 java {
     sourceCompatibility = JavaVersion.VERSION_21
@@ -29,6 +30,7 @@ java {
 
 test {
     systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
+    jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
 }
 compileJava {
     options.encoding = 'UTF-8'
